force-app/main/default/objects/Rest_Service_Config__mdt/Rest_Service_Config__mdt.object-meta.xml
<CustomObject>
    <label>Rest Service Configuration</label>
    <pluralLabel>Rest Service Configurations</pluralLabel>
</CustomObject>