force-app/main/default/objects/Rest_Service_Config__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <description>The api key required to authenticate into the rest service.</description>
    <label>Api Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>