force-app/main/default/objects/Rest_Service_Config__mdt/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <description>The number of records that will be processed in a single execution.</description>
    <label>Batch size</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>