force-app/main/default/objects/Rest_Service_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint to use in callouts</description>
    <label>Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>