force-app/main/default/objects/Rest_Service_Config__mdt/fields/Page_Limit__c.field-meta.xml
<CustomField>
    <fullName>Page_Limit__c</fullName>
    <description>Limit on the amount of pages the rest service has, in the case it uses a paginator</description>
    <label>Page Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>