force-app/main/default/objects/Rest_Service_Config__mdt/fields/Result_Number__c.field-meta.xml
<CustomField>
    <fullName>Result_Number__c</fullName>
    <description>The minimum amount of results to retreive from the rest service</description>
    <label>Result Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>