force-app/main/default/objects/Rest_Service_Config__mdt/fields/Time_difference__c.field-meta.xml
<CustomField>
    <fullName>Time_difference__c</fullName>
    <description>Difference in seconds between every job that is executing in the org that will call the rest service, in order not to overload both the apex code and the server that is being called.</description>
    <label>Time difference (seconds)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>